Update for SequencedCollections in Java 21.
Signed-off-by: Photon-GitHub <photonde@protonmail.com>